syntax = "proto3";

package fabchain.fab;

import "fabchain/fab/user.proto";
import "fabchain/fab/filestore.proto";
import "fabchain/fab/agency.proto";
import "fabchain/fab/product.proto";
import "fabchain/fab/storefront.proto";
import "fabchain/fab/request.proto";
import "fabchain/fab/pricer.proto";
import "fabchain/fab/manufacture.proto";
import "fabchain/fab/capability.proto";
import "fabchain/fab/response.proto";
import "fabchain/fab/order.proto";

option go_package = "fabchain/x/fab/types";

// Msg defines the Msg service.
service Msg {
  rpc CreateUser        (MsgCreateUser       ) returns (MsgCreateUserResponse       );
  rpc UpdateUser        (MsgUpdateUser       ) returns (MsgUpdateUserResponse       );
  rpc DeleteUser        (MsgDeleteUser       ) returns (MsgDeleteUserResponse       );
  rpc CreateFilestore   (MsgCreateFilestore  ) returns (MsgCreateFilestoreResponse  );
  rpc UpdateFilestore   (MsgUpdateFilestore  ) returns (MsgUpdateFilestoreResponse  );
  rpc DeleteFilestore   (MsgDeleteFilestore  ) returns (MsgDeleteFilestoreResponse  );
  rpc CreateAgency      (MsgCreateAgency     ) returns (MsgCreateAgencyResponse     );
  rpc UpdateAgency      (MsgUpdateAgency     ) returns (MsgUpdateAgencyResponse     );
  rpc DeleteAgency      (MsgDeleteAgency     ) returns (MsgDeleteAgencyResponse     );
  rpc CreateProduct     (MsgCreateProduct    ) returns (MsgCreateProductResponse    );
  rpc UpdateProduct     (MsgUpdateProduct    ) returns (MsgUpdateProductResponse    );
  rpc DeleteProduct     (MsgDeleteProduct    ) returns (MsgDeleteProductResponse    );
  rpc CreateStorefront  (MsgCreateStorefront ) returns (MsgCreateStorefrontResponse );
  rpc UpdateStorefront  (MsgUpdateStorefront ) returns (MsgUpdateStorefrontResponse );
  rpc DeleteStorefront  (MsgDeleteStorefront ) returns (MsgDeleteStorefrontResponse );
  rpc CreateRequest     (MsgCreateRequest    ) returns (MsgCreateRequestResponse    );
  rpc UpdateRequest     (MsgUpdateRequest    ) returns (MsgUpdateRequestResponse    );
  rpc DeleteRequest     (MsgDeleteRequest    ) returns (MsgDeleteRequestResponse    );
  rpc CreatePricer      (MsgCreatePricer     ) returns (MsgCreatePricerResponse     );
  rpc UpdatePricer      (MsgUpdatePricer     ) returns (MsgUpdatePricerResponse     );
  rpc DeletePricer      (MsgDeletePricer     ) returns (MsgDeletePricerResponse     );
  rpc CreateManufacture (MsgCreateManufacture) returns (MsgCreateManufactureResponse);
  rpc UpdateManufacture (MsgUpdateManufacture) returns (MsgUpdateManufactureResponse);
  rpc DeleteManufacture (MsgDeleteManufacture) returns (MsgDeleteManufactureResponse);
  rpc CreateCapability  (MsgCreateCapability ) returns (MsgCreateCapabilityResponse );
  rpc UpdateCapability  (MsgUpdateCapability ) returns (MsgUpdateCapabilityResponse );
  rpc DeleteCapability  (MsgDeleteCapability ) returns (MsgDeleteCapabilityResponse );
  rpc CreateResponse    (MsgCreateResponse   ) returns (MsgCreateResponseResponse   );
  rpc UpdateResponse    (MsgUpdateResponse   ) returns (MsgUpdateResponseResponse   );
  rpc DeleteResponse    (MsgDeleteResponse   ) returns (MsgDeleteResponseResponse   );
  rpc CreateOrder       (MsgCreateOrder      ) returns (MsgCreateOrderResponse      );
  rpc UpdateOrder       (MsgUpdateOrder      ) returns (MsgUpdateOrderResponse      );
  rpc DeleteOrder       (MsgDeleteOrder      ) returns (MsgDeleteOrderResponse      );
}
message MsgCreateUser {
  string creator    = 1;
  string manager    = 2;
  string identifier = 3;
}

message MsgCreateUserResponse {
  uint64 id = 1;
}

message MsgUpdateUser {
  string creator    = 1;
  uint64 id         = 2;
  string manager    = 3;
  string identifier = 4;
}

message MsgUpdateUserResponse {}

message MsgDeleteUser {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteUserResponse {}

message MsgCreateFilestore {
  string creator = 1;
  string owner   = 2;
  string name    = 3;
  string style   = 4;
  string url     = 5;
}

message MsgCreateFilestoreResponse {
  uint64 id = 1;
}

message MsgUpdateFilestore {
  string creator = 1;
  uint64 id      = 2;
  string owner   = 3;
  string name    = 4;
  string style   = 5;
  string url     = 6;
}

message MsgUpdateFilestoreResponse {}

message MsgDeleteFilestore {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteFilestoreResponse {}

message MsgCreateAgency {
  string creator         = 1;
  string owner           = 2;
  string name            = 3;
  string paymentProvider = 4;
  string paymentAddress  = 5;
}

message MsgCreateAgencyResponse {
  uint64 id = 1;
}

message MsgUpdateAgency {
  string creator         = 1;
  uint64 id              = 2;
  string owner           = 3;
  string name            = 4;
  string paymentProvider = 5;
  string paymentAddress  = 6;
}

message MsgUpdateAgencyResponse {}

message MsgDeleteAgency {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteAgencyResponse {}

message MsgCreateProduct {
           string creator   = 1;
           string owner     = 2;
           string name      = 3;
           string agency    = 4;
  repeated string shares    = 5;
           string filestore = 6;
           string root      = 7;
           string manifest  = 8;
}

message MsgCreateProductResponse {
  uint64 id = 1;
}

message MsgUpdateProduct {
           string creator   = 1;
           uint64 id        = 2;
           string owner     = 3;
           string name      = 4;
           string agency    = 5;
  repeated string shares    = 6;
           string filestore = 7;
           string root      = 8;
           string manifest  = 9;
}

message MsgUpdateProductResponse {}

message MsgDeleteProduct {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteProductResponse {}

message MsgCreateStorefront {
  string creator = 1;
  string owner   = 2;
  string name    = 3;
}

message MsgCreateStorefrontResponse {
  uint64 id = 1;
}

message MsgUpdateStorefront {
  string creator = 1;
  uint64 id      = 2;
  string owner   = 3;
  string name    = 4;
}

message MsgUpdateStorefrontResponse {}

message MsgDeleteStorefront {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteStorefrontResponse {}

message MsgCreateRequest {
  string creator  = 1;
  string owner    = 2;
  string product  = 3;
  string settings = 4;
}

message MsgCreateRequestResponse {
  uint64 id = 1;
}

message MsgUpdateRequest {
  string creator  = 1;
  uint64 id       = 2;
  string owner    = 3;
  string product  = 4;
  string settings = 5;
}

message MsgUpdateRequestResponse {}

message MsgDeleteRequest {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteRequestResponse {}

message MsgCreatePricer {
  string creator = 1;
  string owner   = 2;
}

message MsgCreatePricerResponse {
  uint64 id = 1;
}

message MsgUpdatePricer {
  string creator = 1;
  uint64 id      = 2;
  string owner   = 3;
}

message MsgUpdatePricerResponse {}

message MsgDeletePricer {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeletePricerResponse {}

message MsgCreateManufacture {
           string creator         = 1;
           string owner           = 2;
           string name            = 3;
  repeated string pricer          = 4;
           string paymentProvider = 5;
           string paymentAddress  = 6;
}

message MsgCreateManufactureResponse {
  uint64 id = 1;
}

message MsgUpdateManufacture {
           string creator         = 1;
           uint64 id              = 2;
           string owner           = 3;
           string name            = 4;
  repeated string pricer          = 5;
           string paymentProvider = 6;
           string paymentAddress  = 7;
}

message MsgUpdateManufactureResponse {}

message MsgDeleteManufacture {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteManufactureResponse {}

message MsgCreateCapability {
  string creator     = 1;
  string owner       = 2;
  string manufacture = 3;
  string manifest    = 4;
}

message MsgCreateCapabilityResponse {
  uint64 id = 1;
}

message MsgUpdateCapability {
  string creator     = 1;
  uint64 id          = 2;
  string owner       = 3;
  string manufacture = 4;
  string manifest    = 5;
}

message MsgUpdateCapabilityResponse {}

message MsgDeleteCapability {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteCapabilityResponse {}

message MsgCreateResponse {
  string creator = 1;
  string pricer  = 2;
  string request = 3;
  string price   = 4;
}

message MsgCreateResponseResponse {
  uint64 id = 1;
}

message MsgUpdateResponse {
  string creator = 1;
  uint64 id      = 2;
  string pricer  = 3;
  string request = 4;
  string price   = 5;
}

message MsgUpdateResponseResponse {}

message MsgDeleteResponse {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteResponseResponse {}

message MsgCreateOrder {
  string creator      = 1;
  string response     = 2;
  string storefront   = 3;
  string identifier   = 4;
  string paymentProof = 5;
}

message MsgCreateOrderResponse {
  uint64 id = 1;
}

message MsgUpdateOrder {
  string creator      = 1;
  uint64 id           = 2;
  string response     = 3;
  string storefront   = 4;
  string identifier   = 5;
  string paymentProof = 6;
}

message MsgUpdateOrderResponse {}

message MsgDeleteOrder {
  string creator = 1;
  uint64 id      = 2;
}

message MsgDeleteOrderResponse {}

