import { GeneratedType } from "@cosmjs/proto-signing";
import { MsgUpdateAgency } from "./types/fabchain/fab/tx";
import { MsgUpdateFilestore } from "./types/fabchain/fab/tx";
import { MsgDeletePricer } from "./types/fabchain/fab/tx";
import { MsgDeleteManufacture } from "./types/fabchain/fab/tx";
import { MsgCreatePricer } from "./types/fabchain/fab/tx";
import { MsgCreateStorefront } from "./types/fabchain/fab/tx";
import { MsgUpdatePricer } from "./types/fabchain/fab/tx";
import { MsgDeleteUser } from "./types/fabchain/fab/tx";
import { MsgUpdateProduct } from "./types/fabchain/fab/tx";
import { MsgDeleteResponse } from "./types/fabchain/fab/tx";
import { MsgUpdateStorefront } from "./types/fabchain/fab/tx";
import { MsgUpdateRequest } from "./types/fabchain/fab/tx";
import { MsgUpdateCapability } from "./types/fabchain/fab/tx";
import { MsgDeleteOrder } from "./types/fabchain/fab/tx";
import { MsgCreateUser } from "./types/fabchain/fab/tx";
import { MsgCreateProduct } from "./types/fabchain/fab/tx";
import { MsgCreateRequest } from "./types/fabchain/fab/tx";
import { MsgDeleteRequest } from "./types/fabchain/fab/tx";
import { MsgUpdateUser } from "./types/fabchain/fab/tx";
import { MsgDeleteCapability } from "./types/fabchain/fab/tx";
import { MsgCreateManufacture } from "./types/fabchain/fab/tx";
import { MsgCreateResponse } from "./types/fabchain/fab/tx";
import { MsgCreateFilestore } from "./types/fabchain/fab/tx";
import { MsgCreateOrder } from "./types/fabchain/fab/tx";
import { MsgCreateAgency } from "./types/fabchain/fab/tx";
import { MsgDeleteFilestore } from "./types/fabchain/fab/tx";
import { MsgDeleteStorefront } from "./types/fabchain/fab/tx";
import { MsgUpdateResponse } from "./types/fabchain/fab/tx";
import { MsgDeleteProduct } from "./types/fabchain/fab/tx";
import { MsgDeleteAgency } from "./types/fabchain/fab/tx";
import { MsgUpdateManufacture } from "./types/fabchain/fab/tx";
import { MsgCreateCapability } from "./types/fabchain/fab/tx";
import { MsgUpdateOrder } from "./types/fabchain/fab/tx";

const msgTypes: Array<[string, GeneratedType]>  = [
    ["/fabchain.fab.MsgUpdateAgency", MsgUpdateAgency],
    ["/fabchain.fab.MsgUpdateFilestore", MsgUpdateFilestore],
    ["/fabchain.fab.MsgDeletePricer", MsgDeletePricer],
    ["/fabchain.fab.MsgDeleteManufacture", MsgDeleteManufacture],
    ["/fabchain.fab.MsgCreatePricer", MsgCreatePricer],
    ["/fabchain.fab.MsgCreateStorefront", MsgCreateStorefront],
    ["/fabchain.fab.MsgUpdatePricer", MsgUpdatePricer],
    ["/fabchain.fab.MsgDeleteUser", MsgDeleteUser],
    ["/fabchain.fab.MsgUpdateProduct", MsgUpdateProduct],
    ["/fabchain.fab.MsgDeleteResponse", MsgDeleteResponse],
    ["/fabchain.fab.MsgUpdateStorefront", MsgUpdateStorefront],
    ["/fabchain.fab.MsgUpdateRequest", MsgUpdateRequest],
    ["/fabchain.fab.MsgUpdateCapability", MsgUpdateCapability],
    ["/fabchain.fab.MsgDeleteOrder", MsgDeleteOrder],
    ["/fabchain.fab.MsgCreateUser", MsgCreateUser],
    ["/fabchain.fab.MsgCreateProduct", MsgCreateProduct],
    ["/fabchain.fab.MsgCreateRequest", MsgCreateRequest],
    ["/fabchain.fab.MsgDeleteRequest", MsgDeleteRequest],
    ["/fabchain.fab.MsgUpdateUser", MsgUpdateUser],
    ["/fabchain.fab.MsgDeleteCapability", MsgDeleteCapability],
    ["/fabchain.fab.MsgCreateManufacture", MsgCreateManufacture],
    ["/fabchain.fab.MsgCreateResponse", MsgCreateResponse],
    ["/fabchain.fab.MsgCreateFilestore", MsgCreateFilestore],
    ["/fabchain.fab.MsgCreateOrder", MsgCreateOrder],
    ["/fabchain.fab.MsgCreateAgency", MsgCreateAgency],
    ["/fabchain.fab.MsgDeleteFilestore", MsgDeleteFilestore],
    ["/fabchain.fab.MsgDeleteStorefront", MsgDeleteStorefront],
    ["/fabchain.fab.MsgUpdateResponse", MsgUpdateResponse],
    ["/fabchain.fab.MsgDeleteProduct", MsgDeleteProduct],
    ["/fabchain.fab.MsgDeleteAgency", MsgDeleteAgency],
    ["/fabchain.fab.MsgUpdateManufacture", MsgUpdateManufacture],
    ["/fabchain.fab.MsgCreateCapability", MsgCreateCapability],
    ["/fabchain.fab.MsgUpdateOrder", MsgUpdateOrder],
    
];

export { msgTypes }